src/tests/snapshots/synoik__tests__window_opening__check_target_size@fsF-dhP0.5-wfsBU.snap
---
source: src/tests/window_opening.rs
description: "open fullscreen: false\ndefault window height: P0.5\nwant fullscreen: BU"
expression: snapshot
---
initial configure:
size: 616 × 336, bounds: 1248 × 688, states: []

post-map configures:
size: 616 × 336, bounds: 1248 × 688, states: [Activated]
