src/tests/snapshots/synoik__tests__window_opening__check_target_size@fsF-dhU-b-wfsBU.snap
---
source: src/tests/window_opening.rs
description: "open fullscreen: false\ndefault window height: U\nborder on\nwant fullscreen: BU"
expression: snapshot
---
initial configure:
size: 608 × 680, bounds: 1240 × 680, states: []

post-map configures:
size: 608 × 680, bounds: 1240 × 680, states: [Activated]
